k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-backend
  namespace: insurance-sandbox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance-backend
  template:
    metadata:
      labels:
        app: insurance-backend
    spec:
      imagePullSecrets:
        - name: scw-registry-secret

      containers:
        - name: backend
          image: rg.fr-par.scw.cloud/insurance-sandbox/backend:sandbox
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
