k8s/insurance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-ingress
  namespace: insurance-sandbox
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 51.158.74.49.nip.io 
      secretName: insurance-tls
  rules:
    - host: 51.158.74.49.nip.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: insurance-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: insurance-backend
                port:
                  number: 80
